--- a/Rapport/rapport_had/rapport_h.tex
+++ b/Rapport/rapport_had/rapport_h.tex
@@ -372,7 +372,7 @@ Dans le cas où la croissance se fait plus lentement, comme on peut le voir sur 
 \end{figure}
 
 Pour notre troisième et dernier modèle, nous avons repris le modèle précédent en ajoutant cette fois l'apport de chaleur des impacts. Cet apport se fait sous deux formes : via la chaleur propre de l'objet impactant et via l'énergie cinétique qu'il dépose lors de l'impact. Toutefois cette énergie est déposée à la surface du planétésimal; or comme on a pu le constater grâce aux modèles précédents, les échanges radiatifs à la surface sont très efficaces, ainsi sur la totalité de l'énergie apportée par l'impact, seule une portion est effectivement déposée dans les couches supérieures du planétésimal, le reste étant immédiatement rayonné vers la nébuleuse. L'article sur le quel nous nous sommes basés proposait une proportion d'énergie conservée comprise entre 20\% et 40\% cette part d'énergie étant déposée sur une épaisseur $R/5$ qui correspond au rayon moyen du planétésimal impactant.
-Nous avons considéré deux hypothèses sur la températures des impactants, la première est de supposer leur température fixe égale à \SI{1000}{K}, et la seconde est de supposer que les impactants sont des planétésimaux qui suivent la même évolution que le planétésimal que nous modélisons. Nous avons ainsi calculé la température moyenne en fonction du temps pour des planétésimaux impactants de rayon $R(t)/5$ où $R(t)$ est le rayon du planétésimal que l'on étudie.
+Nous avons considéré deux hypothèses sur la température des impactants, la première est de supposer leur température fixe égale à \SI{1000}{K}, et la seconde est de supposer que les impactants sont des planétésimaux qui suivent la même évolution que le planétésimal que nous modélisons. Nous avons ainsi calculé la température moyenne en fonction du temps pour des planétésimaux impactants de rayon $R(t)/5$ où $R(t)$ est le rayon du planétésimal que l'on étudie.
 
 On peut constater sur la figure \ref{fig3} que le chauffage par impact avec une température des impactants fixée à \SI{1000}{K} est responsable d'une augmentation de la température quasiment uniforme sur l'ensemble de l'épaisseur du planétésimal d'environ 100 à 200K. 
 
