--- a/Rapport/rapport_felix/rapport_f.tex
+++ b/Rapport/rapport_felix/rapport_f.tex
@@ -147,15 +147,15 @@ Ce projet s'inspire grandement de l'article \textit{Thermal evolution and differ
 La formation de notre système solaire est encore aujourd'hui un mystère qui suscite de nombreuses recherches. Le mécanisme ayant permis l'évolution d'un nuage de poussières vers les planètes que l'on connaît aujourd'hui est encore mal compris. 
 \medskip
 
-Les grandes lignes de ce mécanisme sont bien connus. La poussière autour du soleil va coalescer et former des corps de quelques kilomètres de diamètres. Ces embryons de planètes appelés planétésimaux, attirent ensuite la matière environnante ainsi que des planétésimaux plus petits et évoluent finalement vers les planètes telle que nous les connaissons.
-Cependant, le détail de ces mécanismes sont encore à préciser. Des preuves récentes montrent par exemple que la séparation des astres en un noyau métallique liquide et un manteau solide composé de silicates se serait faite très tôt dans l'histoire de ces planètes. Les mécanismes permettant cette différentiation rapide au niveau des planétésimaux reste une question ouverte de la recherche actuelle. 
+Les grandes lignes de ce mécanisme sont bien connues. La poussière autour du soleil va coalescer et former des corps de quelques kilomètres de diamètre. Ces embryons de planètes appelés planétésimaux, attirent ensuite la matière environnante ainsi que des planétésimaux plus petits et évoluent finalement vers les planètes telles que nous les connaissons.
+Cependant, les détails de ces mécanismes sont encore à préciser. Des preuves récentes montrent par exemple que la séparation des astres en un noyau métallique liquide et un manteau solide composé de silicates se serait faite très tôt dans l'histoire de ces planètes. Les mécanismes permettant cette différentiation rapide au niveau des planétésimaux reste une question ouverte de la recherche actuelle. 
 \medskip
 
-Dans ce rapport, on s'intéresse justement à ces mécanismes de différentiation. Plus précisément, l'objectif est d'étudier par une étude de diffusion thermique simple la différentiation dans les planétésimaux. En comparant les profils de températures à l'intérieur d'un planétésimal aux températures de fusion des éléments présents, il est possible de déterminer si oui ou non la fusion est possible. La présence de cette fusion pourrait en effet expliquer les différentiations rapides observées par des mécanismes de percolation ou simplement de séparation de phase. 
-L'originalité de ce projet réside dans l'étude de l'influence de différents termes de chauffage dans l'équation de la chaleur. En plus d'un terme de chauffage radioactif généralement utilisé dans ce genre d'étude, on a considérer un terme de chauffage par impact couplé à l'évolution en taille du planétésimal.
+Dans ce rapport, on s'intéresse justement à ces mécanismes de différentiation. Plus précisément, l'objectif est d'étudier, par une étude de diffusion thermique simple, la différentiation dans les planétésimaux. En comparant les profils de températures à l'intérieur d'un planétésimal aux températures de fusion des éléments présents, il est possible de déterminer si oui ou non la fusion est possible. La présence de cette fusion pourrait en effet expliquer les différentiations rapides observées par des mécanismes de percolation ou simplement de séparation de phase. 
+L'originalité de ce projet réside dans l'étude de l'influence de différents termes de chauffage dans l'équation de la chaleur. En plus d'un terme de chauffage radioactif généralement utilisé dans ce genre d'étude, on a considéré un terme de chauffage par impact couplé à l'évolution en taille du planétésimal.
 \medskip
 
-La résolution de ce problème a été réalisée numériquement. Pour résumer, on a résolu l'équation de la chaleur en géométrie sphérique par des différences finies. Les méthodes numériques ainsi que les détails du modèle physique employés sont décrit dans la première partie de ce rapport. Ensuite, une seconde partie présente les résultats obtenus pour une planète de taille constante. Une troisième partie présente l'influence de la croissance de la planète sur les profils de températures observées. Enfin, l'implémentation du chauffage par impact ainsi que son importance dans le chauffage des planétésimaux sont discuter dans une dernière partie.
+La résolution de ce problème a été réalisée numériquement. Pour résumer, on a résolu l'équation de la chaleur en géométrie sphérique par des différences finies. Les méthodes numériques ainsi que les détails du modèle physique employés sont décrits dans la première partie de ce rapport. Ensuite, une seconde partie présente les résultats obtenus pour une planète de taille constante. Une troisième partie présente l'influence de la croissance de la planète sur les profils de températures observées. Enfin, l'implémentation du chauffage par impact ainsi que son importance dans le chauffage des planétésimaux sont discutés dans une dernière partie.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -167,13 +167,13 @@ La résolution de ce problème a été réalisée numériquement. Pour résumer,
 On cherche donc à étudier l'évolution d'un planétésimal. Pour cela, plusieurs hypothèses simplificatrices ont été réalisées. 
 \medskip
 
-Tout d'abord, on ne tient compte que des effets de diffusion. Le planétésimal est modélisé par un mélange homogène constitué de $18\%$ de métal à et de $82\%$ silicates. La séparation de phase n'est donc pas prise en compte. De même les variations des propriétés du mélange avec la température sont négligées. Les constantes du mélanges sont simplement calculées par la moyenne des constantes du métal et des silicates avec des poids associés à leurs proportions. Les valeurs des constantes obtenues sont retranscrites en table \ref{constantes}.
+Tout d'abord, on ne tient compte que des effets de diffusion. Le planétésimal est modélisé par un mélange homogène constitué de $18\%$ de métal à et de $82\%$ silicates. La séparation de phase n'est donc pas prise en compte. De même les variations des propriétés du mélange avec la température sont négligées. Les constantes du mélanges sont simplement calculées par la moyenne des constantes du métal et des silicates avec des poids associés à leur proportion. Les valeurs des constantes obtenues sont retranscrites en table \ref{constantes}.
 \medskip
 
-Utiliser un tel modèle ou l'on ne considère qu'un mélange alors que l'on souhaite justement expliquer la différentiation peut sembler inapproprié. Cependant, si l'on considère que la séparation du métal des silicates ne peut se faire que sous forme liquide notre approche reste valide et permet de répondre à la question : est-il possible d'atteindre la température de fusion dans le mélange solide ce qui permettrait une différentiation sous forme liquide ultérieurement ? 
+Utiliser un tel modèle où l'on ne considère qu'un mélange alors que l'on souhaite justement expliquer la différentiation peut sembler inapproprié. Cependant, si l'on considère que la séparation du métal des silicates ne peut se faire que sous forme liquide notre approche reste valide et permet de répondre à la question : est-il possible d'atteindre la température de fusion dans le mélange solide ce qui permettrait une différentiation sous forme liquide ultérieurement ? 
 \medskip
 
-Les transitions de phases du métal et des silicates sont prises en compte par l'intermédiaire d'une chaleur latente de changement d'état qui apparaît donc comme une énergie libérée la ou il y a solidification et absorbée au niveau de la fusion. L'influence de cette chaleur latente est détaillée en partie \ref{latente}.
+Les transitions de phase du métal et des silicates sont prises en compte par l'intermédiaire d'une chaleur latente de changement d'état qui apparaît donc comme une énergie libérée là où il y a solidification et absorbée au niveau de la fusion. L'influence de cette chaleur latente est détaillée en partie \ref{latente}.
 
 \tabulinesep=0.3mm
 \begin{table}[h!]
@@ -190,7 +190,7 @@ Les transitions de phases du métal et des silicates sont prises en compte par l
   \label{constantes}
 \end{table}
 
-Enfin, on a considéré que le problème avait la symétrie sphérique, c'est à dire que les variations de températures ne dépendent que de la coordonnée radiale. Sous ces hypothèses, notre planétésimal est régit simplement par une équation de la diffusion en sphérique :
+Enfin, on a considéré que le problème avait une symétrie sphérique, c'est à dire que les variations de température ne dépendent que de la coordonnée radiale. Sous ces hypothèses, notre planétésimal est régit simplement par une équation de la diffusion en sphérique :
 \begin{equation}
 \rho C_p \dfrac{\partial T}{\partial t} = \frac{k_{T}}{r^2} \dfrac{\partial }{\partial r}\left( r^2 \dfrac{\partial T}{\partial r} \right) + P
 \label{diffusion}
@@ -198,16 +198,16 @@ Enfin, on a considéré que le problème avait la symétrie sphérique, c'est à
 où $r$ est la coordonnée radiale, $T$ la température et $P$ un terme de production de chaleur.
 \medskip
 
-Le terme de production comprend tout d'abord le chauffage radioactif $P_{rad}$ dû à la décomposition des éléments radioactifs présent. Dans cette étude, on considère uniquement le chauffage du à l'aluminium 26. Bien entendu, l'amplitude de ce terme décroît de manière exponentielle avec le temps. Il est sous la forme :
+Le terme de production comprend tout d'abord le chauffage radioactif $P_{rad}$ dû à la décomposition des éléments radioactifs présents. Dans cette étude, on considère uniquement le chauffage dû à l'aluminium 26. Bien entendu, l'amplitude de ce terme décroît de manière exponentielle avec le temps. Il est sous la forme :
 \begin{equation}
 P_{rad} = P_{0}2^{-t/\tau_{1/2}}
 \end{equation}
-où $P_{0}$ est le chauffage initial et $\tau_{1/2}$ le temps de demi-vie de l'aluminium 26 qui est de 0.717 My. Le chauffage initial peut être calculé à l'aide de l'abondance en aluminium 26 à l'intérieur du planétésimal et a été estimé à $1.5\ 10^{-7}$ W.kg$^{-1}$.
+où $P_{0}$ est le chauffage initial et $\tau_{1/2}$ le temps de demi-vie de l'aluminium 26 qui est de 0.717 My. Le chauffage initial peut être calculé à l'aide de l'abondance en aluminium 26 à l'intérieur du planétésimal et a été estimé à \SI{1.5E-7}{W.kg^{-1}}.
 Le terme de production comprend également les pertes à la surface qui ont été prises comme le rayonnement d'un corps noir à la température de la surface.
 Enfin, ce terme comprend également le chauffage par impact dû aux impactants. Le détail de ce terme sera développé en partie \ref{impactant}.
 \medskip
 
-La dernière chose à préciser est la question de la condition initiale. Une des possibilités est de considérer que le planétésimal s'est formé presque instantanément à partir d'un nuage de poussière. De sorte, la température initiale du planétésimal est essentiellement dû à la température de la nébuleuse soit 300 K. L'autre source d'énergie pouvant augmenter la température initiale est bien entendu l'énergie gravitationnelle récupérée lors de l'effondrement du nuage de poussière. Cette énergie peut être calculée analytiquement et vaut :
+La dernière chose à préciser est la question de la condition initiale. Une des possibilités est de considérer que le planétésimal s'est formé presque instantanément à partir d'un nuage de poussière. De sorte, la température initiale du planétésimal est essentiellement dûe à la température de la nébuleuse soit 300 K. L'autre source d'énergie pouvant augmenter la température initiale est bien entendu l'énergie gravitationnelle récupérée lors de l'effondrement du nuage de poussière. Cette énergie peut être calculée analytiquement et vaut :
 \begin{equation}
 E_{G} = \frac{3}{5}\frac{GM}{R^2}
 \end{equation}
@@ -223,8 +223,8 @@ Cependant, pour le rayon initial de 5 km utilisé dans toute cette étude, cette
 On souhaite résoudre l'équation de la chaleur sphérique numériquement. 
 \medskip
 
-Pour cela, la première des étapes est d'adimensionnées les équations pour limiter les erreurs numériques. Une bonne échelle temporelle est bien évidement le temps de demi-vie de l'aluminium 26 $\tau_{1/2}$ qui est le temps caractéristique de notre modèle. \`A partir de ce temps, il est possible de créer une longueur de diffusion à l'aide de la conductivité thermique $L_d = \sqrt{\frac{k_T \tau_{1/2}}{\rho C_p} } \simeq 10$ km. Enfin, une bonne température de référence est celle de la nébuleuse $T_{neb}$.
-En injectant ces variables dans l'équation de diffusion \ref{diffusion}, on obtient en unité adimensionnées :
+Pour cela, la première des étapes est d'adimensionner les équations pour limiter les erreurs numériques. Une bonne échelle temporelle est bien évidement le temps de demi-vie de l'aluminium 26 $\tau_{1/2}$ qui est le temps caractéristique de notre modèle. \`A partir de ce temps, il est possible de créer une longueur de diffusion à l'aide de la conductivité thermique $L_d = \sqrt{\frac{k_T \tau_{1/2}}{\rho C_p} } \simeq 10$ km. Enfin, une bonne température de référence est celle de la nébuleuse $T_{neb}$.
+En injectant ces variables dans l'équation de diffusion \ref{diffusion}, on obtient en unités adimensionnées :
 \begin{equation}
 \dfrac{\partial T}{\partial t} = \frac{1}{r^2} \dfrac{\partial }{\partial r}\left( r^2 \dfrac{\partial T}{\partial r} \right) + c_0P
 \label{diffusion_adim}
@@ -238,7 +238,7 @@ L'équation a ensuite été discrétisée tant dans le domaine temporel que spat
 \begin{align}
 \frac{1}{r^2} \dfrac{\partial }{\partial r}\left( r^2 \dfrac{\partial T}{\partial r} \right) &\rightarrow \frac{1}{r^2_i \Delta r}\left[ r^2_{i+1/2}\frac{T_{i+1} - T_{i}}{\Delta r} + r^2_{i-1/2}\frac{T_{i-1} - T_{i}}{\Delta r} \right]
 \end{align}
-Les variations temporelles sont quant à elle décrite à l'aide d'un schéma d'Euler implicite.
+Les variations temporelles sont quant à elles décrites à l'aide d'un schéma d'Euler implicite.
 \medskip
 
 En pratique, résoudre un pas de temps revient donc à résoudre un système de la forme :
@@ -246,7 +246,7 @@ En pratique, résoudre un pas de temps revient donc à résoudre un système de 
 MT^{t+1} = T^t + c_0 P^{t}
 \end{equation}
 Avec la matrice $$M = \left[ Id + \frac{\Delta t ~ r^2_{i+1/2}}{r^2_i \Delta r^2} ~ d1 + \frac{\Delta t ~ r^2_{i-1/2}}{r^2_i \Delta r^2} ~ d2  \right]$$
-où $d_1$ et $d_2$ sont des matrices sur et sous diagonales supérieur et inférieur. $M$ est donc une matrice tridiagonale.
+où $d_1$ et $d_2$ sont des matrices sur et sous diagonales supérieures et inférieures. $M$ est donc une matrice tridiagonale.
 $$
 d1=
 \begin{bmatrix}
@@ -272,7 +272,7 @@ $$
 \section{Influence du chauffage et de la chaleur latente}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-On s'intéresse dans un premier temps à l'évolution en température d'un corps de taille fixe chauffé uniquement par le chauffage radioactif. Les profils de températures observées seront donc le résultat de l'équilibre entre le chauffage radioactif et les pertes de chaleur à la surface.
+On s'intéresse dans un premier temps à l'évolution en température d'un corps de taille fixe chauffé uniquement par le chauffage radioactif. Les profils de température observés seront donc le résultat de l'équilibre entre le chauffage radioactif et les pertes de chaleur à la surface.
 
 \subsection{Régimes d'évolution}
 
@@ -285,16 +285,16 @@ Tout d'abord, il est possible de s'intéresser au profil de température dans le
     	\label{diffusion2} 
 \end{figure}
 
-La première chose a remarquer sur cette figure est que la température à la surface est toujours très proche de la température de la nébuleuse. Le rayonnement du corps noir est en effet extrêmement efficace pour évacuer la chaleur. 
+La première chose à remarquer sur cette figure est que la température à la surface est toujours très proche de la température de la nébuleuse. Le rayonnement du corps noir est en effet extrêmement efficace pour évacuer la chaleur. 
 \medskip
 
-Ensuite, on peut voir que 3 régimes suivant le rayon sont observées. Lorsque le rayon est faible devant la longueur de diffusion, les effets de la diffusion sont très importants de sorte que toute la chaleur générée par la radioactivité est rapidement diffusé vers la surface. La température de l'astre est donc relativement uniforme et proche de celle de la nébuleuse. Pour des rayons grands devant la longueur de diffusion, la température à l'intérieure est beaucoup plus élevée puisque l'énergie créée n'a pas le temps d'être diffusée à la surface. La température est donc constante en dehors de la surface ou la température est fixée par le rayonnement. Pour des rayons proches de la longueur de diffusion un comportement intermédiaire est observée où la température augmente avec la profondeur.
+Ensuite, on peut voir que 3 régimes suivant le rayon sont observés. Lorsque le rayon est faible devant la longueur de diffusion, les effets de la diffusion sont très importants de sorte que toute la chaleur générée par la radioactivité est rapidement diffusée vers la surface. La température de l'astre est donc relativement uniforme et proche de celle de la nébuleuse. Pour des rayons grands devant la longueur de diffusion, la température à l'intérieure est beaucoup plus élevée puisque l'énergie créée n'a pas le temps d'être diffusée à la surface. La température est donc constante en dehors de la surface ou la température est fixée par le rayonnement. Pour des rayons proches de la longueur de diffusion un comportement intermédiaire est observé où la température augmente avec la profondeur.
 
 \newpage
 \subsection{Chaleur latente de changement d'état}
 \label{latente}
 
-Il est également possible de s'intéresser à l'importance de la chaleur latente de changement d'état en comparant les profils de températures lorsque l'on la considère et lorsqu'elle est négligée.
+Il est également possible de s'intéresser à l'importance de la chaleur latente de changement d'état en comparant les profils de température lorsqu'on la considère et lorsqu'elle est négligée.
 
 \begin{figure}[h]
     \centering	    
@@ -304,10 +304,10 @@ Il est également possible de s'intéresser à l'importance de la chaleur latent
 \end{figure}
 \medskip
 
-Comme on peut le voir en figure \ref{diffusion1}, un décalage de 300 K entre le cas avec et sans chaleur latente est observée. En effet, ce décalage s'explique par l'énergie qui a été nécessaire pour réaliser la fusion. On peut dire que cette énergie est stockée dans l'état liquide et pourra être libérée si il y a solidification.
+Comme on peut le voir en figure \ref{diffusion1}, un décalage de 300 K entre le cas avec et sans chaleur latente est observé. En effet, ce décalage s'explique par l'énergie qui a été nécessaire pour réaliser la fusion. On peut dire que cette énergie est stockée dans l'état liquide et pourra être libérée si il y a solidification.
 
 \subsection{Température moyenne au cours du temps}
-Enfin, la dernière chose que l'on peut vérifiée avec ce modèle est l'évolution temporelle logique d'un tel astre. Au début de sa vie, le chauffage radioactif est suffisamment important pour augmenter sa température. Après un temps supérieur à quelque fois le temps de demi-vie ce chauffage n'est cependant plus très efficace et la température de l'astre diminue à cause des pertes à la surface. La figure \ref{tempMoy} représente une telle évolution en fonction du temps.
+Enfin, la dernière chose que l'on peut vérifier avec ce modèle est l'évolution temporelle logique d'un tel astre. Au début de sa vie, le chauffage radioactif est suffisamment important pour augmenter sa température. Après un temps supérieur à quelque fois le temps de demi-vie ce chauffage n'est cependant plus très efficace et la température de l'astre diminue à cause des pertes à la surface. La figure \ref{tempMoy} représente une telle évolution en fonction du temps.
 \begin{figure}[h]
     \centering	    
 	\includegraphics[scale=0.43]{figures/tempMoy.pdf}
@@ -328,7 +328,7 @@ On considère maintenant une augmentation du rayon de la planète avec le temps.
 \begin{equation}
 \dot{R} \propto R^\beta
 \end{equation}
-en prenant $\beta =$ 0, 1,  où 2. Dans toutes les simulations réalisées, le planétésimal évolue en suivant cette loi de 5 à 500 km en 1 My. La taille du planétésimal en fonction du temps sont représentés en figure \ref{rayon}.
+en prenant $\beta =$ 0, 1,  où 2. Dans toutes les simulations réalisées, le planétésimal évolue en suivant cette loi de 5 à 500 km en 1 My. La taille du planétésimal en fonction du temps est représenté en figure \ref{rayon}.
 
 \begin{figure}[h]
     \centering	    
@@ -355,10 +355,10 @@ On peut réitérer l'étude précédente en prenant en compte ce terme d'accrét
     	\label{profilacre} 
 \end{figure}
 
-Dans le cas ou $\beta = 1$, un profil quasiment linéaire est observée et la température au centre est proche de celle observée pour un planétésimal de taille fixe. Le matériel étant ajouté relativement tôt dans l'histoire de la planète, il est encore capable de chauffer grâce à la radioactivité. 
+Dans le cas ou $\beta = 1$, un profil quasiment linéaire est observé et la température au centre est proche de celle observée pour un planétésimal de taille fixe. Le matériel étant ajouté relativement tôt dans l'histoire de la planète, il est encore capable de chauffer grâce à la radioactivité. 
 \medskip
 
-Pour $\beta = 1$ et 2, les températures sont nettement plus basse. Cela s'explique par le fait que la planète reste petite devant la longueur de diffusion pendant un long temps et tout le chauffage radioactif initial est évacué. La masse apportée à la fin de l'évolution  est moins efficace pour chauffer le planétésimal et n'a pas le temps de le faire, ce qui résulte en des températures sensiblement plus basses.
+Pour $\beta = 1$ et 2, les températures sont nettement plus basse. Cela s'explique par le fait que la planète reste petite devant la longueur de diffusion pendant un temps long et tout le chauffage radioactif initial est évacué. La masse apportée à la fin de l'évolution  est moins efficace pour chauffer le planétésimal et n'a pas le temps de le faire, ce qui résulte en des températures sensiblement plus basses.
 
 
 \subsection{Température moyenne au cours du temps}
@@ -368,14 +368,14 @@ Pour la suite, il peut être intéressant de s'intéresser à la température mo
 \begin{figure}[h]
     \centering	    
 	\includegraphics[scale=0.45]{figures/tempMoy_acretion.pdf}
-    \caption{Température moyenne en fonction du temps pour l'évolution d'un planétésimal de 5 à 500 km en 1 My. Le tracé en pointillé correspond aux températures obtenu pour un astre de taille fixe égale à 500km.} 
+    \caption{Température moyenne en fonction du temps pour l'évolution d'un planétésimal de 5 à 500 km en 1 My. Le tracé en pointillé correspond aux températures obtenues pour un astre de taille fixe égale à 500km.} 
     \label{tempMoyacre}
 \end{figure}
 
 Au début de l'évolution, les planètes évoluant avec un exposant $\beta= 1$ ou 2 sont les plus chaudes. Cela s'explique par le fait qu'elles récupèrent une petite quantité de matière leurs permettant de s'isoler en obtenant un rayon supérieur à la longueur de diffusion. Elles augmentent ensuite en température grâce au chauffage radioactif, sans être refroidi par la matière froide progressivement apportée de la surface par le terme d'accrétion. Cependant au fur et à mesure du temps, de plus en plus de masse est apportée et refroidit la planète.
 \medskip
 
-À l'inverse, pour $\beta = 0$, de la matière froide est apportée en plus grosse quantité dès le début de l'évolution. Cette matière va ensuite chauffé le planétésimal. La matière supplémentaire apporté continuellement de la surface vient cependant refroidir la planète en moyenne.
+À l'inverse, pour $\beta = 0$, de la matière froide est apportée en plus grosse quantité dès le début de l'évolution. Cette matière va ensuite chauffer le planétésimal. La matière supplémentaire apportée continuellement de la surface vient cependant refroidir la planète en moyenne.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Influence du chauffage par impact}
@@ -384,20 +384,20 @@ Au début de l'évolution, les planètes évoluant avec un exposant $\beta= 1$ o
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Prise en compte dans le modèle}
-On considère maintenant l'ajout d'une source de chaleur supplémentaire qui est celle des impacts. L'énergie apportée provient de deux sources. La première est bien sur l'énergie cinétique qui a été prise comme étant l'énergie gravitationnelle des impactants. Cette énergie correspond donc à l'énergie cinétique associé à la vitesse de libération de l'impactant. La seconde source d'énergie est l'énergie thermique propre des impactants. Pour évaluer la température de ces impactants et donc cette énergie, deux modèles ont été utilisé. Dans le premier on considère que la température des impactants est de 1000K. Dans le second on utilise le modèle précédant d'accrétion pour déterminer cette énergie : les impactants évoluent de la même manière que le planétésimal.
+On considère maintenant l'ajout d'une source de chaleur supplémentaire qui est celle des impacts. L'énergie apportée provient de deux sources. La première est bien sûr l'énergie cinétique qui a été prise comme étant l'énergie gravitationnelle des impactants. Cette énergie correspond donc à l'énergie cinétique associé à la vitesse de libération de l'impactant. La seconde source d'énergie est l'énergie thermique propre des impactants. Pour évaluer la température de ces impactants et donc cette énergie, deux modèles ont été utilisés. Dans le premier, on considère que la température des impactants est de 1000K. Dans le second, on utilise le modèle précédent d'accrétion pour déterminer cette énergie : les impactants évoluent de la même manière que le planétésimal.
 \medskip
 
-Ensuite, seul $20\%$ de l'énergie de l'impact est effectivement transmise au planétésimal. Ce facteur permet de tenir compte du fait que le paramètre d'impact n'est pas toujours parfait, mais aussi du fait que, le choc ayant lieu à la surface, une grosse partie de l'énergie est directement perdu à la surface.
+Ensuite, seul $20\%$ de l'énergie de l'impact est effectivement transmise au planétésimal. Ce facteur permet de tenir compte du fait que le paramètre d'impact n'est pas toujours parfait, mais aussi du fait que, le choc ayant lieu à la surface, une grosse partie de l'énergie est directement perdue à la surface.
 \medskip
 
-Enfin, le rayon des impactant a été évalué à R/5 à l'aide de modèles statistiques d'agrégation et on a considérer que l'énergie était introduite sur cette profondeur.
+Enfin, le rayon des impactant a été évalué à R/5 à l'aide de modèles statistiques d'agrégation et on a considéré que l'énergie était introduite sur cette profondeur.
 
-Cette étude peut donc être résumer en 4 points :
+Cette étude peut donc être résumée en 4 points :
 \begin{enumerate}
 \item La croissance est due à la masse apportée par les impactants
 \item Seulement $20\%$ de l'énergie des impactants est introduite
 \item L'énergie est répartie sur une couche d'épaisseur $R/5$
-\item La température des impactants est de 1000 K ou déterminée par le modèle précédant.
+\item La température des impactants est de 1000 K ou déterminée par le modèle précédent.
 \end{enumerate}
 
 %%%%%%%%%%%%%
@@ -407,7 +407,7 @@ Cette étude peut donc être résumer en 4 points :
 \begin{figure}[h]
     \centering	    
 	\includegraphics[scale=0.45]{figures/impact2.pdf}
-    \caption{Profil de température à la fin de l'évolution d'un planétésimal de 5 à 500 km en 1 My. Le tracé en trait plein correspond à des impactants de 1000K. Le tracé en tirets correspond à des impactants dont la température est déterminée à l'aide du modèle d'accrétion simple.  Le tracé en pointillés correspond au profil présenté en figure \ref{profilacre} (sans impacts).}
+    \caption{Profil de température à la fin de l'évolution d'un planétésimal de 5 à 500 km en 1 My. Le tracé en trait plein correspond à des impactants à 1000K. Le tracé en tirets correspond à des impactants dont la température est déterminée à l'aide du modèle d'accrétion simple.  Le tracé en pointillés correspond au profil présenté en figure \ref{profilacre} (sans impacts).}
     	\label{impact} 
 \end{figure}
 
@@ -417,7 +417,7 @@ La figure \ref{impact} montre les résultats de cette étude. Le chauffage par d
 Le modèle complet considérant l'évolution en température des impactants donne cependant des résultats plus mitigés et l'augmentation n'est plus que de quelques dizaines de kelvin.
 \medskip
 
-Ainsi, l'importance du chauffage par impact pour les simulations est faible comparée à celle du chauffage radioactif et de l'accrétion. Cette dernière n'est pas suffisante pour permettre la création d'un noyau fondu la où il n'apparaît pas déjà. Bien entendu, comme on s'est intéressé au planétésimaux au début de leur évolution, le chauffage radioactif prédomine. A l'inverse, si on s'intéresse au temps long, il est certain que le chauffage par impact devient la source principale d'énergie puisque la radioactivité diminue exponentiellement. 
+Ainsi, l'importance du chauffage par impact pour les simulations est faible comparée à celle du chauffage radioactif et de l'accrétion. Cette dernière n'est pas suffisante pour permettre la création d'un noyau fondu la où il n'apparaît pas déjà. Bien entendu, comme on s'est intéressé aux planétésimaux au début de leur évolution, le chauffage radioactif prédomine. À l'inverse, si on s'intéresse aux temps longs, il est certain que le chauffage par impact devient la source principale d'énergie puisque la radioactivité diminue exponentiellement. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -425,7 +425,7 @@ Ainsi, l'importance du chauffage par impact pour les simulations est faible comp
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-En conclusion, on a pu étudier l'influence des différents termes apparaissant dans le modèle gouvernant l'évolution en température d'un planétésimal. Cette étude permet de mieux comprendre les conditions dans lesquels un noyau liquide peut se former. L'hypothèse de départ stipulant que le chauffage par impact joue un rôle important dans la différentiation est cependant fausse. En effet, la formation ou non du noyau est déterminée par la vitesse de croissance du planétésimal. On peut cependant nuancer nos propos en remarquant que le chauffage par impact est néanmoins responsable d'une nette augmentation de température sur l'intégralité du planétésimal et que ce dernier prédominera aux temps longs auxquels on ne s'est pas intéressé.
+En conclusion, on a pu étudier l'influence des différents termes apparaissant dans le modèle gouvernant l'évolution en température d'un planétésimal. Cette étude permet de mieux comprendre les conditions dans lesquelles un noyau liquide peut se former. L'hypothèse de départ stipulant que le chauffage par impact joue un rôle important dans la différentiation est cependant fausse. En effet, la formation ou non du noyau est déterminée par la vitesse de croissance du planétésimal. On peut cependant nuancer nos propos en remarquant que le chauffage par impact est néanmoins responsable d'une nette augmentation de température sur l'intégralité du planétésimal et que ce dernier prédominera aux temps longs auxquels on ne s'est pas intéressé.
 
 
 \newpage
